tests/reference/asr-kwargs_01_error-ada0f8b.stderr
semantic error: func01() got multiple values for argument 'a'
  --> tests/errors/kwargs_01_error.py:11:5
   |
11 |     func01(arg1, a=int(8))
   |     ^^^^^^^^^^^^^^^^^^^^^^ 
